# duo

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  pyrightconfig.json
common/logging/: config.json  filters.py  main.py
docs/: schema.dbml
services/api/: .env.local  __main__.py  config.py  main.py  websockets.py
services/api/routers/: auth.py
services/api/schemas/: auth.py
services/ui/: .editorconfig  .prettierrc.json  README.md  index.html  package-lock.json  package.json
services/ui/src/: App.vue
services/ui/src/__tests__/: App.spec.ts
